--- a/theme/gallery_1_mobile/css/theme.css
+++ b/theme/gallery_1_mobile/css/theme.css
@@ -18,3 +18,14 @@
 	max-width:970px;
 	margin:0 auto 10px auto;
 }
+
+/*medias*/
+@media all and ( max-width: 535px ) {	
+	.footer .footer-menu-copyright {	
+		width:50%!important;	
+	}
+
+	.footer .footer-search-logo {	
+		width:50%!important;	
+	}
+}
